[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/player/still.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/player/walk2.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/walk1.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/shoot0.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/walk3.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/shoot1.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/walk0.png" type="Texture" id=8]
[ext_resource path="res://sounds/9mm.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 33 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "Idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "Shoot",
"speed": 18.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 33 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerAnimation" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 2 )
animation = "Walk"
frame = 1
playing = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 16, -17 )

[node name="GunSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -30.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 1390
limit_bottom = 1000
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="AffectRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AffectRange"]
shape = SubResource( 3 )
[connection signal="animation_finished" from="PlayerAnimation" to="." method="_on_PlayerAnimation_animation_finished"]
[connection signal="body_entered" from="AffectRange" to="." method="_on_AffectRange_body_entered"]
